Prevent inline code blocks from wrapping
Prevent inline `code` elements from line-wrapping, which was ugly.

--- a/css/main.css
+++ b/css/main.css
@@ -236,16 +236,21 @@ a:visited { color: #205caa; }
   font-size: 15px;
 }
 
-.post code { padding: 1px 5px; }
+.post code {
+  padding: 1px 5px;
+  white-space: nowrap;
+}
 .post pre { margin: 15px 0; }
 
 .post ul,
 .post ol { margin-left: 1.35em; }
 
-.post pre code { border: none; }
 .post ul li,
 .post ol li { margin: 15px 0; }
-
+.post pre code {
+  white-space: pre;
+  border: none;
+}
 /* terminal */
 .post pre.terminal {
   border: 1px solid #000;
